Fix notification z-index

--- a/gallery.css
+++ b/gallery.css
@@ -35,6 +35,7 @@
     top: 5%;
     left: 50%;
     transform: translate(-50%, 0);
+    z-index: 999999;
     padding: 1rem 2rem;
     background: #0dc5c1;
     color: white;
